# food_delivery

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
app/: controllers.py  dependencies.py  middlewares.py
app/controllers/: cart_items.py
db/: connection.py  db.db  models.py
repositories/: base.py  cart_item_repository.py  shop_item_repository.py  user_repository.py
respositories/: base.py
schemas/: cart_item.py  shop_item.py  user.py
schemas/response_models/: cart_item.py  shop_item.py  user.py
services/: base.py  cart_item_service.py  shop_item_service.py  user_service.py
